--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "name": "Barkday\u2122",
   "short_name": "Barkday",
   "description": "Dog birthday age calculator & celebration reminders with gift ideas.",
-  "start_url": "/barkday/",
-  "scope": "/barkday/",
+  "start_url": "/Barkday/",
+  "scope": "/Barkday/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#111827",
